content/documentation/mocha/9.0.0/UserGuide/en_US/insert_module.adoc

== The Insert Module [[insert_module]]


=== Overview

NOTE: This section only relates to *Mocha Pro*. This feature is not available in *Mocha HitFilm* or *Mocha AE*.  For a full comparison of features, please refer to the comparison chart online.

The Insert module is where you choose the image you would like to insert into your tracked layer. You can import a still frame or a moving sequence. Once imported, the Insert module provides a comprehensive range of tools for matching this new image to the original background layer. The skill here, naturally, is to make the newly imported image look like it was in the original shot all along.

image:UserGuide/en_US/images/inserttabfull.jpg[]

=== Input

This is where you choose the Input Clip or background layer and the Insert Clip or foreground layer, and optionally a separate input clip with an alpha channel for compositing.

image:UserGuide/en_US/images/insert_input.jpg[width="40%"]

*Background Clip*

By default *Mocha Pro* selects the last clip that was tracked as the input. If you want to change the input, just select a different clip from the pulldown menu.


*Insert Clip*

This clip mirrors the Insert Clip inside Layer properties, i.e. if you change one, the other also changes.

By default *_mocha Pro_* selects None as the foreground input, expecting you to make a choice of your own. To choose an insert select the Import button and use the file browser to locate a still frame or a file sequence that you would like to appear over the tracked background clip.
In the Mocha Pro Plugin, you can choose an 'Insert Layer' placeholder that reads from layers back in the host timeline to render in Mocha.

*Pre-multiplied*

Check this is you want to force the alpha in the insert clip to be pre-multiplied. Off means the clip remains straight alpha.

=== Output [Standalone only]

Here you can select the name of the clip to be output. Once a clip has been rendered it is automatically named Composite_&lt;clipname&gt;.

To choose a different name for the output clip select the New... button and choose a new name.

The remainder of the controls in the Insert module dictate both how much of the insert is displayed and how it is displayed during the course of the shot.


=== Source

The Source region of interest (ROI) can move anywhere on the insert image, including outside it. It is the area of the insert that you would like to be displayed in the tracked layer. As you adjust the ROI, the insert is scaled to fit the surface. There is also a Reset button to reset the ROI to the corners of the insert image. By default, the aspect ratio is locked. Uncheck Lock Aspect Ratio to allow arbitrary ROI changes.

image:UserGuide/en_US/images/insertroi.jpg[]


To adjust the ROI aspect ratio to match that of the background image given its current position and shape in the background image, click on Fit ROI to Surface. Conversely, the Fit Surface to ROI button moves the surface position to match the aspect ratio of the insert image, given its ROI settings. These controls will work best if you are in a frame where the insert is as front-on as possible. For them to work correctly, the pixel aspect ratio of both the input clip and insert clip must be correct. A common issue is that if the resolution of either clip was not recognized when the clip was imported, it is assigned the PAL camera type. This often does not give the correct pixel aspect ratio. To check this, switch to the Camera tool and select each clip in turn, checking the appearance on the screen to make sure that each clip appears correct on the screen. If not, change the Film Type. If you know that the pixel aspect ratio of the clip is one (square pixels) select Custom as the Film Type and set the pixel aspect ratio to one.

The number fields are positioned in the menu to relate to the edge of the ROI that they adjust. So, to reduce the height of the insert ROI at the top of the frame, decrease the value in the top ROI number field by dragging or highlighting the current value and typing in a new value. Similarly, to reduce the height of the insert ROI at the bottom of the frame, increase the value in the bottom number field by dragging or highlighting the current value and typing in a new value. The same applies for the left and right edges of the frame with the left and right number fields.


=== Comp

image:UserGuide/en_US/images/comp.jpg[]

==== Layer

This section handles how to warp the Layer Insert Clip

*Grid Warp*

If you turn on "Grid Warp" in the warp tools you can use the a grid to distort the image inserted in the layer.

The dropdown can set the level of detail in the grid. There are 4 levels, with Level 1 being the lowest detail.

Below is an example of Grid Warp set to Level 2:

image:UserGuide/en_US/images/insert_gridwarp_level2.jpg[]

You can warp the grid points in the viewer to adjust your insert, or use the outer yellow lines to bulge or pinch the edges.

*Grid Points Only*

This shows only the intersections of the grid lines instead of the lines. This can be useful when you need to see the underlying insert image while adjusting the warp.

*PowerMesh Warp*

This checkbox activates the controls so the grid warp can be weighted and distorted organically by the PowerMesh.
When this option is off, the grid warp only follows the planar motion of the track.

NOTE: You need to have tracked a PowerMesh before this option will have any effect. See <<powermesh, PowerMesh and Mesh Tracking>> for more details.

*Mesh Weighting*

This controls how much the Grid Warp is distorted by the PowerMesh. At 100% weighting, the PowerMesh warps the grid at full strength. At 0% the grid only follows the planar surface.

*Mesh Falloff*

This controls how much the Grid Warp is affected when overlapping the edges of the PowerMesh. If the Grid is outside the PowerMesh area, it will still be influenced if the falloff is above zero.

In the example below, the grid point is being warped too far by the PowerMesh:

image:UserGuide/en_US/images/insert_powermesh_falloff.jpg[]

Adjusting the PowerMesh falloff to 0% tells Mocha to ignore the grid outside the mesh boundaries, and pulls it back into place:

image:UserGuide/en_US/images/insert_powermesh_falloff_zero.jpg[]



*Reset*

This button resets the Grid Warp back to the original unmodified grid and changes the PowerMesh warp settings back to the defaults.


==== Blend

*Mode*

This dropdown sets the blend mode. Options include:

* Darken
* Multiply
* Color Burn
* Lighten
* Screen
* Color Dodge
* Overlay
* Softlight
* Hardlight
* Color
* Luminosity

*Opacity*

This parameter controls the opacity of the foreground image insert. It is a multiplier of the alpha of the insert, applied before the composite.

*Gain*

This is where you color correct the insert once it has been added to the tracked layer.

*Motion Blur*

Select this button if you want to apply motion blur to your insert.

*Render Insert Cutout (RGBA)*

This renders the cut out of the insert with alpha along with the composite file. Turn off if you only want the composite render of the insert.

==== Masks

*Use All Layers*

If you want to mask off an area of your insert, clicking on this tool will cause the rendered
insert to only change the pixels within the mattes above and including the current layer.
If the checkbox is switched off, you can select an individual matte to use instead.

*Invert*

Inverts the mattes of the Insert.

*Invert Alpha*

Inverts the Insert Alpha if it exists.

*Erode Alpha*

Change this value from its default zero value to erode the alpha channel of the insert by the given number of pixels.


=== Feather

If you want to add a soft edge around the edges of the insert, use the Feather controls. There are separate controls for the left, right, top and bottom edge widths, which are between 0 and 1, where the value 0 indicates no edge and 1 means that the edge covers the whole of the insert.

image:UserGuide/en_US/images/edge.jpg[width="50%"]


If you switch on Lock, all four edges are locked to the same edge width. H Lock and V Lock apply lock separately to the left/right and the top/bottom edges respectively.


=== Transform

This section controls a level of corner pin control on top of the adjusted track. This feature is particularly useful for curved surfaces. It allows the corners of the surface to be used in the same way as the warp control points (described below) – by aligning the newly imported insert with a region of the tracked image independently of the blue surface contour, which follows the adjusted track.

The offset region is drawn in yellow underneath the existing blue surface. You can use the new points either by dragging the sliders to increase or decrease the value of the coordinates, or by highlighting the numeric field and typing in a new value. In addition to this you can hold down the Alt and Control keys on the keyboard (Alt+Cmd on a Mac) whilst dragging a surface point or line to achieve the same result. The new points created are offset in a controlled way from the adjusted track.

Hold down Alt, Control and Shift (Alt+Shift+Cmd on a Mac) to gear the changes down 10 times. There is finally a Reset button to return the offset parameters to their defaults.

image:UserGuide/en_US/images/insert_transform.jpg[]

When using the rotate tool to rotate the offset surface, the pixel aspect ratio of the insert clip will be used to create the correct effect. If it is not correct the offset surface will appear to squeeze or stretch as it is rotated. See the *_ROI_* section to see how to fix this problem.

==== Export Offset Tracking Data

Export the transformed track. The offsets are keyframed settings of the position of the insert.


=== Inserting in Stereo

All inserts are warped in stereo if you have tracked both views.
You can render the insert for both views by selecting *Operate on All Views* button next to the Render buttons on the timeline.

image:UserGuide/en_US/images/operate_on_all_views_render.jpg[]

=== Rendering the Insert in the Plugin

You have a lot of control over the Insert renders in the plugin interface.

See <<rendering_insert_layers, Rendering Insert Layers>> in the Mocha Pro Plugin section of the User Guide.

=== Insert Render Resampling

If you want to change the type of resampling applied to an Insert render, you can change this in the Project Settings.

Go to `File > Project Settings...`and look for the "Resampling" section:

image:UserGuide/en_US/images/project_settings_resampling.jpg[]

Resampling types are:

* Bilinear: The default setting. A very common resampling method that produces decent results
* Nearest neighbour: Fast, but can be lower quality
* Lanczos 2-4: Good for preserving details and minimising artifacts, but can produce ringing on certain images

Ultimately the resampling can be subjective so you may need to test what works best for the given render, but we highly recommend either Bilinear or Lanczos for Insert renders.
